--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  
+{
+  "name": "connect-mongo",
+  "version": "0.8.1",
+  "description": "MongoDB session store for Express and Connect",
+  "keywords": [
+    "connect",
+    "mongo",
+    "mongodb",
+    "session",
+    "express"
+  ]
+},
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.8.1",
