--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
   },
+  "main": "server.js"
 
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
