--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./bin/www"
   },
   
 
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.8.1",
+    "connect-mongo": "^0.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "^2.0.0",
     "ejs": "~0.8.5",
@@ -18,7 +19,7 @@
     "express-session": "^1.10.3",
     "mongoose": "^3.8.23",
     "morgan": "~1.3.0",
-    "passport": "^0.2.2",
+    "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.1.3"
   },
