--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  
+  "main": "server.js",
 
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
